--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
-envlist = py26-django13, py26-django14, py26-django15, py27-django13 ,py27-django14, py27-django15, py32-django15, py33-django15
+envlist = 
+    py26-django13, py26-django14, py26-django15, py27-django16, 
+    py27-django13, py27-django14, py27-django15, py27-django16, 
+    py32-django15, py32-django16,
+    py33-django15, py33-django16
 
 [django13]
 deps =
@@ -12,6 +16,10 @@ deps =
 [django15]
 deps =
     Django>=1.5,<1.6
+
+[django16]
+deps =
+    Django>=1.6,<1.7
 
 [testenv]
 commands =
@@ -29,6 +37,12 @@ deps = {[django14]deps}
 basepython = python2.6
 deps = {[django15]deps}
 
+[testenv:py26-django16]
+basepython = python2.6
+deps = {[django16]deps}
+commands = 
+   django-admin.py test dfk.tests --settings=dfk.test_settings
+
 [testenv:py27-django13]
 basepython = python2.7
 deps = {[django13]deps}
@@ -41,10 +55,26 @@ deps = {[django14]deps}
 basepython = python2.7
 deps = {[django15]deps}
 
+[testenv:py27-django16]
+basepython = python2.7
+deps = {[django16]deps}
+commands = 
+   django-admin.py test dfk.tests --settings=dfk.test_settings
+
 [testenv:py32-django15]
 basepython = python3.2
 deps = {[django15]deps}
 
+[testenv:py32-django16]
+basepython = python3.2
+deps = {[django16]deps}
+
 [testenv:py33-django15]
 basepython = python3.3
 deps = {[django15]deps}
+
+[testenv:py33-django16]
+basepython = python3.3
+deps = {[django16]deps}
+commands = 
+   django-admin.py test dfk.tests --settings=dfk.test_settings
