--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist = 
     py26-django13, py26-django14, py26-django15, py27-django16, 
-    py27-django13, py27-django14, py27-django15, py27-django16, 
-    py32-django15, py32-django16,
-    py33-django15, py33-django16
+    py27-django13, py27-django14, py27-django15, py27-django16, py27-django17
+    py32-django15, py32-django16, py32-django17
+    py33-django15, py33-django16, py34-django17
 
 [django13]
 deps =
@@ -20,6 +20,10 @@ deps =
 [django16]
 deps =
     Django>=1.6,<1.7
+
+[django17]
+deps =
+    Django>=1.7,<1.8
 
 [testenv]
 commands =
@@ -61,6 +65,12 @@ deps = {[django16]deps}
 commands = 
    django-admin.py test dfk.tests --settings=dfk.test_settings
 
+[testenv:py27-django17]
+basepython = python2.7
+deps = {[django17]deps}
+commands = 
+   django-admin.py test dfk.tests --settings=dfk.test_settings
+
 [testenv:py32-django15]
 basepython = python3.2
 deps = {[django15]deps}
@@ -69,6 +79,10 @@ deps = {[django15]deps}
 basepython = python3.2
 deps = {[django16]deps}
 
+[testenv:py32-django17]
+basepython = python3.2
+deps = {[django17]deps}
+
 [testenv:py33-django15]
 basepython = python3.3
 deps = {[django15]deps}
@@ -76,5 +90,11 @@ deps = {[django15]deps}
 [testenv:py33-django16]
 basepython = python3.3
 deps = {[django16]deps}
+commands = 
+   django-admin.py test dfk.tests --settings=dfk.test_settings
+
+[testenv:py33-django17]
+basepython = python3.3
+deps = {[django17]deps}
 commands = 
    django-admin.py test dfk.tests --settings=dfk.test_settings
